<resources>
    <string name="app_name">Smart Table Tennis</string>
    <string name="prompt_email">E-mail:</string>
    <string name="prompt_password">Password:</string>
    <string name="action_log_in">Log In</string>
    <string name="action_register">Register</string>
    <string name="noUserToast">Please enter a username!</string>
    <string name="noPassToast">Please enter a password!</string>
    <string name="noBothToast">Please enter a username and password!</string>
    <string name="wipToast">Feature yet to be implemented, sorry for the inconvenience!</string>

    <string name="statsBtn">Statistics</string>
    <string name="setupBtn">Ball Configuration</string>
    <string name="randomBtn">Random Practice</string>

    <string name="setupText">Ball Configuration</string>
    <string name="speedTitle">Speed</string>
    <string name="angleHorizontalTitle">Angle (Horizontal)</string>
    <string name="angleVerticalTitle">Angle (Vertical)</string>
    <string name="ballCountTitle">Balls shot:</string>
    <string name="defaultNum">0</string>
    <string name="startButton">Start!</string>
    <string name="stopButton">Stop!</string>
    <string name="speedNumberDefault">0</string>
    <string name="angleNumberDefault">0</string>
    <string name="startButtonToast">Starting Practice!</string>
    <string name="stopButtonToast">Stopping Practice!</string>

    <string name="statsTitle">Statistics</string>
    <string name="averageSpeed">Average Speed =</string>
    <string name="minSpeed">Minimum Speed =</string>
    <string name="maxSpeed">Maximum Speed =</string>
    <string name="accuracy">Accuracy =</string>
    <string name="shotTotal">Total Balls Shot =</string>
    <string name="shotsHit">Total Shots Hit =</string>
    <string name="shotsMissed">Total Shots Missed =</string>
    <string name="defaultAccuracy">0%</string>

    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="alltime">All-time</string>
    <string name="toastDaily">Daily</string>
    <string name="toastMonthly">Monthly</string>
    <string name="toastYearly">Yearly</string>
    <string name="toastAlltime">All-time</string>
    <string name="selectTime">Select a time: </string>


    <string name="randomText">Random Practice</string>
    <string name="randomDesc">Random Practice is a practice where each shot will have a randomized speed and angle so be prepared!</string>
    <string name="randBtnStop">Stop</string>
    <string name="randBtnStart">Start</string>
    <string name="randStartButtonToast">Starting Random Practice!</string>
    <string name="randStopButtonToast">Stopping Random Practice!</string>

    <string name="socialText">Social</string>
    <string name="futurePlans">Users will be able to share their statistics on social medias (Facebook, Twitter, etc.)</string>

    <string name="timerText">Time Interval</string>
    <string name="defaultNumTimer">2</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid Email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="loginsucess">Login Successful!</string>
    <string name="loginfailed">Login Failed!</string>
    <string name="registersuccess">Register Success!</string>
    <string name="registerfailed">Register Failed!</string>
    <string name="emailsent">Verification email sent to </string>
    <string name="notsent">Failed to send verification email.</string>
    <string name="signOut">Sign out</string>
    <string name="socialTextTB">Social</string>

    <string name="spin1">Flat</string>
    <string name="spin2">Topspin</string>
    <string name="spin3">Backspin</string>
    <string name="spinText">Spin Types</string>

    <string name="onOffText">Start/Stop</string>

    <string name="createaccount">Create Account</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="forgot">Forgot your password?</string>
    <string name="forgotpass">Please Check Email</string>
    <string name="enterUserToReset">Please Enter Email to Reset Password</string>
    <string name="fullname">Full Name:</string>
    <string name="reenter">Re-Enter Password</string>
    <string name="dontmatch">Passwords Do Not Match!</string>

    <string name="time1">Slow</string>
    <string name="time2">Medium</string>
    <string name="time3">Fast</string>

    <string name="vert1">Low</string>
    <string name="vert2">Medium</string>
    <string name="vert3">High</string>

    <string name="horz1">Left</string>
    <string name="horz2">Center</string>
    <string name="horz3">Right</string>

    <string name="speed1">Slow</string>
    <string name="speed2">Medium</string>
    <string name="speed3">Fast</string>
    <string name="num3">3</string>
    <string name="gamestart">Starting Game In</string>
    <string name="rememberMe">Remember me</string>
    <string name="AboutUs">About Us</string>
    <string name="ContactUs">Contact Us</string>
    <string name="aboutusdescription">Hi! We are Smart Solutions and we plan on bringing you innovative technology to you!</string>
    <string name="githublink">Here is our github link if you would like to explore our projects!</string>
    <string name="contactdescription">Feel free to contact us through our Twitter or Email!</string>
    <string name="userProfileTB">User Profile</string>
    <string name="userprofheader">Your Profile</string>
    <string name="Yourname">Your Name</string>
    <string name="youremail">Your Email</string>
    <string name="changepass">Change Password</string>

    <string name="SettingsTB">Settings</string>
    <string name="angleTitle">Angle</string>
    <string name="BtnUp">Up</string>
    <string name="BtnRight">Right</string>
    <string name="BtnLeft">Left</string>
    <string name="BtnDown">Down</string>

</resources>
